# sdf2d

./: Deep_Eikonal_Solver.m  Deep_solver.py  Local_Numerical_Solver.m  README.md  base_de_donnees.py  local_solver.pt  matrice_poids.m  objectifs.npy  patch.npy  points_adjacents4.m
Apps/Overleaf/JMIV DWI  Registration/: dwiregistering.aux  dwiregistering.bbl  dwiregistering.blg  dwiregistering.tex  francois-preamble.sty  mybib.bib  rebuttal.tex
FMM/: FMM.sln
FMM/Debug/: FMM.ilk
FMM/FMM/: FMM.vcxproj  FMM.vcxproj.filters  minHeap.cpp
FMM/FMM/Debug/: vc142.idb
FMM/FMM/Debug/FMM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FMM.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Projet_C++/: CMakeLists.txt  README.md  fmm2d.cpp  fmm2d.m  fmm2d.mexw64  local_solver_step1-2.pt  minHeap.cpp  minHeap.h
Projet_C++/examples/: Example_fmm2d_cpp.m
Projet_C++/src/: deep_eikonal_solver_c.m  fmm2d.cpp  minHeap.cpp
Projet_matlab(slow_but_visual)/: Deep_Eikonal_Solver.m  Heap.m  Local_Numerical_Solver.m  MinHeap.m  points_adjacents.m
Reseau_pytorch/: Deep_solver.py  base_de_donnees.py  local_solver.pt  objectifs.npy  patch.npy
